style: updated global styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,24 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --color-g-tomato: #f6683c;
+  --color-g-midnight: #00080f;
+  --color-g-lightSteel: #b0c4de;
+  --color-g-slateBlue: #296399;
+  --color-g-hover-slateBlue: #1154a1;
+  --color-g-denim: #4a7dff;
+  --color-g-hover-denim: #abbff1;
+  --color-g-steel: #658caf;
+  --color-g-navy: #c9e5ff;
+  --color-g-dimGray: #29292a;
+  --color-g-gainsboro: #dcdcdc;
+  --color-g-bat: #373738;
+  --color-g-white: #ffffff;
+  --color-g-40-white: rgba(255, 255, 255, 0.4);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  padding: 0;
+  box-sizing: border-box;
 }
